# local-search-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd.yml
deploy/: Caddyfile
deploy/systemd/: local-search-agent-watch.service  local-search-agent.service
docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  index.html  ingestion.md  multi-workspace.md  semantic-search.md  troubleshooting.md
local_search_agent/: __init__.py
local_search_agent/agent/: __init__.py  agent.py  prompts.py  provider_factory.py  rate_limit_handler.py
local_search_agent/agent/tools/: __init__.py  fetch_tool.py  graph_tool.py  search_tool.py
local_search_agent/auth/: __init__.py  admin_keys_routes.py  api_key_provider.py  authorization_middleware.py  errors.py  grants_routes.py  header_provider.py  identity.py  jwt_provider.py  meili_key_crypto.py  meili_key_provisioning.py  route_policy.py  session_routes.py  whoami_route.py  workspace_resolution.py
local_search_agent/cli/: __init__.py  __main__.py  commands.py
local_search_agent/core/: __init__.py  config.py  constants.py  document_node.py  framework.py  key_manager.py  meilisearch_manager.py  tesseract_manager.py
local_search_agent/docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  index.html  ingestion.md  installation.md  multi-workspace.md  production-deployment.md  role_based_access_control.md  semantic-search.md  troubleshooting.md
local_search_agent/ingestion/: __init__.py  chunker.py  cleaner.py  parser.py  pipeline.py
local_search_agent/ingestion/parsers/: __init__.py  csv_parser.py  docx_parser.py  eml_parser.py  html_parser.py  json_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  xlsx_parser.py  xml_parser.py
local_search_agent/scheduler/: __init__.py  incremental_sync.py  monitor.py  watch_mode.py
local_search_agent/search/: __init__.py  meilisearch_client.py  query_builder.py  reranker.py
local_search_agent/semantic/: __init__.py  concept_compiler.py  enricher.py  link_graph.py  query_expander.py  structural_parser.py
local_search_agent/server/: __init__.py  fastapi_app.py  static_mounts.py
local_search_agent/server/middleware/: __init__.py  access_control.py
local_search_agent/tools/: __init__.py  search_tool.py
local_search_agent/ui/: __init__.py  api_routes.py  dashboard.py  export_docx.py  export_xlsx.py  store.py
local_search_agent/ui/templates/: _chat.html  _drawer.html  _modals.html  _script.html  _script_admin_access.html  _script_core.html  _script_health_workspaces_sessions.html  _script_messages_drawer.html  _script_models_boot.html  _script_preview_tokens.html  _script_query_stream.html  _script_role_gating.html  _script_settings.html  _script_toolbar_ingest.html  _script_workspace_sync_modals.html  _sidebar.html  _statusbar.html  _styles.html  _topbar.html  index.html  login.html
local_search_agent/workspace/: __init__.py  auth_db.py  metadata_db.py  workspace_manager.py
tests/: __init__.py  conftest.py  test_activity_logging.py  test_admin_panel_routes.py  test_advanced_settings.py  test_advanced_settings_integration.py  test_agent.py  test_auth_db_sessions.py  test_auth_gaps_and_regressions.py  test_authorization_middleware.py  test_chunker.py  test_cleaner.py  test_cli.py  test_cli_commands_direct.py  test_cli_multi_tenant_flag.py  test_cli_workspace_provisioning_flags.py  test_concurrency_and_rate_limits.py  test_config.py  test_document_node.py  test_export_dual_delivery_mode.py  test_framework_semantic.py  test_header_identity_provider.py  test_health_readiness.py  test_heavy_parsers.py  test_identity_provider.py  test_ingestion.py  test_jwt_identity_provider.py  test_key_manager.py  test_meilisearch_manager.py  test_model_access_and_rate_limit_framework_cli.py  test_model_access_control.py  test_multi_tenant_auth.py  test_parsers.py  test_reranker.py  test_route_policy_coverage.py  test_scheduler.py  test_scoped_meilisearch_keys.py  test_search.py  test_semantic.py  test_server.py  (+10 more)
tests/fixtures/: sample.md  sample.txt
