[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "local-search-agent"
version = "0.2.1"
description = "A framework that replace traditional RAG pipelines. Ingest any number of documents in multiple workspaces (channels, departments, etc.), index it with BM25, and let the agent search, fetch, and reason over it, exactly like searching the web, but entirely on your machine. No vector store, no embedding needed."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wissam Metawee" }]
maintainers = [{ email = "wissammetawee84@gmail.com" }]
requires-python = ">=3.11"

keywords = [
    "rag",
    "search",
    "meilisearch",
    "bm25",
    "langchain",
    "langgraph",
    "agent",
    "local",
    "documents",
    "llm",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# ---------------------------------------------------------------------------
# Core dependencies
# ---------------------------------------------------------------------------

dependencies = [
    # Web framework + file server
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",

    # Meilisearch client
    "meilisearch-python-sdk>=7.1.5",

    # Background scheduler (pinned to 3.x — v4 is alpha with breaking changes)
    # Deprecated in favor of Watch Mode (watchdog) — kept for backward compatibility.
    "apscheduler>=3.11.2,<4.0",

    # Filesystem event watching for Watch Mode (replaces polling-based scheduler)
    "watchdog>=5.0.0,<7.0.0",

    # Cross-encoder re-ranking of search results
    "flashrank>=0.2.10",

    # HTTP client
    "httpx>=0.28.1",

    # File locking for multi-process safe binary download
    "filelock>=3.13.0",

    # Cross-platform user cache/data directories
    "platformdirs>=4.2.0",

    # Terminal UI
    "rich>=13.7.0",
    "pyfiglet>=1.0.2",

    # Document ingestion
    "docling>=2.0.0",
    "rapidocr>=3.3,<4.0.0",
    "onnxruntime>=1.20.0",
    "pytesseract>=0.3.13",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "PyMuPDF>=1.25.0",
    "pypdf>=5.0.0",

    # Word (.docx) chat export
    "python-docx>=1.1.0",

    # LangGraph agent loop + LLM provider integrations
    "langgraph>=1.1.10",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.10",
    "langchain-anthropic>=1.4.2",

    # Google api core
    "google-api-core>=2.30.3",

    # Desktop dashboard
    "pywebview>=5.3.3",
    "jinja2>=3.1.4",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]

dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------

[project.scripts]
local-search = "local_search_agent.cli.commands:main"

# ---------------------------------------------------------------------------
# Project URLs
# ---------------------------------------------------------------------------

[project.urls]
Homepage = "https://github.com/wiss84/local-search-agent"
Repository = "https://github.com/wiss84/local-search-agent"
"Bug Tracker" = "https://github.com/wiss84/local-search-agent/issues"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["local_search_agent*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"local_search_agent.ui" = ["templates/*.html", "assets/*"]
"local_search_agent" = ["docs/**/*", "docs/*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "slow: tests requiring heavy dependencies (Docling model weights). Skipped with --fast.",
]
